k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: harlie
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
